# code

./: .env.example  .gitignore  README.md  dashboard.py  pyproject.toml  requirements.txt
config/: best_gradient_boosting.yaml  best_logistic_regression.yaml  best_random_forest.yaml  sweep_gradient_boosting.yaml  sweep_logistic_regression.yaml  sweep_random_forest.yaml
notebooks/: 01_eda.ipynb  02_preprocessing_checks.ipynb  eda.ipynb
src/core/: data_source.py  io.py  paths.py
src/dashboard/: charts.py  config.py  dataset_views.py  display.py  loader.py  metrics.py  overview.py  sidebar.py
src/dashboard/charts/: base.py  categorical.py  dp.py  heatmaps.py
src/dashboard/tabs/: fidelity.py  privacy.py  tradeoff.py  utility.py
src/dataset/: adult_census.py  data_pipeline.py  data_splitting.py  dataset_config.py  feature_engineering.py
src/evaluation/: evaluate_fidelity.py  evaluate_privacy.py  evaluate_utility.py  evaluation_data.py  metrics.py
src/modeling/: classify.py  synthesize.py  synthesize_dp.py
src/modeling/classification/: classifier_data.py  classifier_models.py  classifier_sweeps.py  classifier_training.py  classify.py
src/modeling/synthesizing/: synthesize.py  synthesize_dp.py
src/utility/: constants.py  logger.py  utils.py  wandb_config.py
